# CepGenEPA

./: CMakeLists.txt
CepGenEPA/: BeamProperties.h  FluxGrid.h  HelicityAmplitudes.h  MatrixElements.h  PythonUtils.h  TwoPartonFlux.h  TwoPartonFluxFactory.h  TwoPartonProcess.h  TwoPartonProcessFactory.h  Utils.h
cards/: epa_electron_cfg.py
ggMatrixElements/: functions.h  helicity_amplitudes.h  matrix_elements.h
python/: trapint_electron_Hamzeh.py
src/: EPAProcess.cpp  FluxGrid.cpp  GammaGammaToGammaGammaEFT.cpp  GammaGammaToGammaGammaSM.cpp  GammaGammaToLL.cpp  GammaGammaToSleptonSlepton.cpp  GammaGammaToWW.cpp  GridTwoPartonFlux.cpp  HelicityAmplitudes.cc  HelicityAmplitudes.cpp  PythonModule.cc  PythonProcess.cpp  PythonTwoPartonFlux.cpp  PythonTwoPartonProcess.cpp  PythonUtils.cpp  TwoPartonFlux.cpp  TwoPartonFluxFactory.cpp  TwoPartonProcessFactory.cpp  functions.cc  helicity_amplitudes.cc  sqme_eft.cc  sqme_sm.cc
src/Fluxes/: ElectronProtonTwoPhotonFlux.cpp  GridTwoPartonFlux.cpp  PythonTwoPartonFlux.cpp
src/Modules/: TwoPartonProcessFactory.cpp
src/Processes/: GammaGammaToFF.cpp  GammaGammaToGammaGammaEFT.cpp  GammaGammaToGammaGammaSM.cpp  GammaGammaToWW.cpp  GammaGammaToZZ.cpp  PythonTwoPartonProcess.cpp
src/Utils/: BeamProperties.cpp  Functions.cpp  HelicityAmplitudes.cpp  PythonModule.cpp  PythonUtils.cpp
utils/: drawFluxes.cc  drawProcesses.cc
